test/expected/operator_before_command.out
shit: 1:1: error: Expected a command before operator, found '||'.
     1 |  || true
       |  ^~ here.
